--- a/package.json
+++ b/package.json
@@ -33,54 +33,55 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.0.0",
-    "@angular/common": "^11.0.0",
-    "@angular/compiler": "^11.0.0",
-    "@angular/core": "^11.0.0",
-    "@angular/forms": "^11.0.0",
-    "@angular/platform-browser": "^11.0.0",
-    "@angular/platform-browser-dynamic": "^11.0.0",
-    "@angular/platform-server": "^11.0.0",
-    "@angular/router": "^11.0.0",
+    "@angular/animations": "13.2.6",
+    "@angular/common": "13.2.6",
+    "@angular/compiler": "13.2.6",
+    "@angular/core": "13.2.6",
+    "@angular/forms": "13.2.6",
+    "@angular/platform-browser": "13.2.6",
+    "@angular/platform-browser-dynamic": "13.2.6",
+    "@angular/platform-server": "13.2.6",
+    "@angular/router": "13.2.6",
     "@nguniversal/express-engine": "^11.1.0",
-    "@nrwl/angular": "11.1.5",
+    "@nrwl/angular": "13.8.5",
     "express": "^4.15.2",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
-    "zone.js": "^0.10.2"
+    "zone.js": "0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.1",
-    "@angular-eslint/eslint-plugin": "~1.0.0",
-    "@angular-eslint/eslint-plugin-template": "~1.0.0",
-    "@angular-eslint/template-parser": "~1.0.0",
-    "@angular/cli": "~11.0.0",
-    "@angular/compiler-cli": "^11.0.0",
-    "@angular/language-service": "^11.0.0",
+    "@angular-devkit/build-angular": "13.2.6",
+    "@angular-eslint/eslint-plugin": "13.0.1",
+    "@angular-eslint/eslint-plugin-template": "13.0.1",
+    "@angular-eslint/template-parser": "13.0.1",
+    "@angular/cli": "13.2.6",
+    "@angular/compiler-cli": "13.2.6",
+    "@angular/language-service": "13.2.6",
     "@nguniversal/builders": "^11.1.0",
-    "@nrwl/cli": "11.1.5",
-    "@nrwl/cypress": "11.1.5",
-    "@nrwl/eslint-plugin-nx": "11.1.5",
-    "@nrwl/jest": "11.1.5",
-    "@nrwl/tao": "11.1.5",
-    "@nrwl/workspace": "11.1.5",
+    "@nrwl/cli": "13.8.5",
+    "@nrwl/cypress": "13.8.5",
+    "@nrwl/eslint-plugin-nx": "13.8.5",
+    "@nrwl/jest": "13.8.5",
+    "@nrwl/tao": "13.8.5",
+    "@nrwl/workspace": "13.8.5",
     "@types/express": "^4.17.0",
-    "@types/jest": "26.0.8",
-    "@types/node": "12.12.38",
+    "@types/jest": "27.0.2",
+    "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "@typescript-eslint/parser": "4.3.0",
     "codelyzer": "^6.0.0",
     "cypress": "^6.0.1",
-    "dotenv": "6.2.0",
+    "dotenv": "10.0.0",
     "eslint": "7.10.0",
     "eslint-config-prettier": "6.0.0",
     "eslint-plugin-cypress": "^2.10.3",
-    "jest": "26.2.2",
-    "jest-preset-angular": "8.3.1",
-    "prettier": "2.2.1",
-    "ts-jest": "26.4.0",
+    "jest": "27.2.3",
+    "jest-preset-angular": "11.1.1",
+    "prettier": "2.5.1",
+    "ts-jest": "27.0.5",
     "ts-node": "~9.1.1",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.3"
+    "typescript": "4.5.5"
   }
 }
+
